<resources>
    <string name="app_name">Kosmos Demo App</string>
    <string name="sign_up">Sign up</string>
    <string name="password_hint_text">F5%2r9!</string><!-- Not real, just example! -->
    <string name="email_hint_text">username@gmail.com</string>
    <string name="username_hint_text">username</string>
    <string name="confirming_sign_up">Confirming sign up…</string>
    <string name="enter_code">Enter code</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Sign in</string>
    <string name="secret_key_label">Secret Key</string>
    <string name="access_key_label">Access Key</string>
    <string name="session_token_label">Session Token</string>
    <string name="need_an_account_sign_up">Need an account? Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="empty" />
</resources>
